--- a/Project01/circle.html
+++ b/Project01/circle.html
@@ -20,11 +20,12 @@ main()
 
 <script id="fragment-shader" type="x-shader/x-fragment">
 precision mediump float;
+varying vec4 color;
 
 void
 main()
 {
-    gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+    gl_FragColor = color;
 }
 </script>
 
@@ -33,9 +34,10 @@ main()
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type="text/javascript" src="circle.js"></script>
 </head>
-
-<body>
-<canvas id="gl-canvas" width="512" height="512">
+<body id="bodyStyle">
+<!-- <h1 id="debug">
+</h1> -->
+<canvas id="gl-canvas">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 </body>
