--- a/Project01/circle2.html
+++ b/Project01/circle2.html
@@ -56,8 +56,8 @@ main()
 <script type="text/javascript" src="circle2.js"></script>
 </head>
 <body id="bodyStyle">
-<h1 id="debug">
-</h1>
+<div id="debug">
+</div>
 <canvas id="gl-canvas">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
